welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value defMoria
defMoria(){
^DwarfCode:6: error: not found: value prendsBiscuit
  prendsBiscuit();
  ^