welcome.lessons.welcome.summative.Moria.scala.code
defMoria(){
  retourne()
  while(!estSurBiscuit){
    avance();
  }
  prendsBiscuit();
  retourne();
  while(!estSurBiscuit){
    avance();
  }
  recule();
  poseBiscuit()
}